--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>To Do App</title>
+    <meta charset="UTF-8">
+    <title>To-Do App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h2>To-Do List</h2>
-<input id="task" placeholder="Enter task">
-<button onclick="addTask()">Add</button>
+    <div class="container">
+        <h1>To-Do List</h1>
 
-<ul id="list"></ul>
+        <input id="taskInput" placeholder="Enter task">
+        <button onclick="addTask()">Add</button>
 
-<script>
-function addTask() {
-    let t = document.getElementById("task");
-    if (t.value.trim() === "") return;
+        <ul id="taskList"></ul>
+    </div>
 
-    let li = document.createElement("li");
-    li.innerHTML = t.value + " <button onclick='this.parentElement.remove()'>X</button>";
-
-    document.getElementById("list").appendChild(li);
-    t.value = "";
-}
-</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
